Mon Oct 16 01:39:35 CEST 2006 (tk)
----------------------------------
  * freshclam: increase default ConnectTimeout to 30 secs

Mon Oct 16 01:12:36 CEST 2006 (tk)
----------------------------------
  * libclamav/readdb.c: use different field order for .mdb files
			(requested by signature maintainers)

Sun Oct 15 21:15:58 CEST 2006 (tk)
----------------------------------
  * libclamav: allow loading multiple .pdb/.wdb files (Edwin)

Sun Oct 15 12:11:26 BST 2006 (njh)
----------------------------------
  * libclamav/untar.c:	Fix compilation warning on Linux

Sun Oct 15 02:20:25 CEST 2006 (tk)
----------------------------------
  * clamd: s/HardwareAcceleration/NodalCoreAcceleration
  * clamscan: s/--hwaccel/--ncore

Sun Oct 15 01:56:34 CEST 2006 (tk)
----------------------------------
  * clamd: s/PhishingScanAllDomains/PhishingStrictURLCheck
  * clamscan: s/--phish-scan-alldomains/--phishing-strict-url-check

Sun Oct 15 01:49:55 CEST 2006 (tk)
----------------------------------
  * libclamav: anti-phish code cleanup (Edwin)

Sat Oct 14 23:09:12 CEST 2006 (tk)
----------------------------------
  * libclamav/dsig.c: new function cli_versigpss(): digital signature
		      verification based on RSASSA-PSS with 2048 bit RSA
		      key and SHA256 hash function
  * libclamav/sha256.[ch]: new files (SHA256 implementation from mhash)
  * sigtool/sigtool.c: generate compressed and signed .cdiff files
  * shared/cdiff.c: handle new .cdiff files

Fri Oct 13 15:42:43 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix compilation warning on FreeBSD
  * clamav-milter:	Fix compilation error on FreeBSD
			Blacklist multiple emails in the same connexion

Wed Oct 11 01:05:37 CEST 2006 (tk)
----------------------------------
  * libclamav: apply patches for the anti-phish code from Edwin:
    - use different signature types for .pdb and .wdb: 'R' for .pdb (regex
      matching real+displayed URL), 'X' for .wdb (the same as 'R'), 'H' for